# crack-hash

./: Cargo.toml  Dockerfile  package-lock.json  package.json
.github/workflows/: build.yml  semantic-tags-after-release.yml  semgrep.yml
src/: main.rs
